# blacktop

./: .gitignore  .gitmodules  README.md  quad1.doc  runtests.sh  watchtests.sh
doc/: SPI resources.txt
hw/: blacktop_bom.xlsx  v02-v03_changes.md
hw/jig/: #MSP-EXP430G2ET-1.dxf  #MSP-EXP430G2ET-2.dxf  ArduinoMega.SLDPRT  CaseLower.SLDPRT  CaseUpper.SLDPRT  MSP-EXP430G2ET-1.dxf  MSP-EXP430G2ET-1.dxf~  MSP-EXP430G2ET-2.dxf  MSP-EXP430G2ET.SLDPRT  base.SLDPRT  blacktop02.step  blacktopTestJig.SLDASM
hw/v01/: blacktop01  blacktop01-cache.lib  blacktop01.bck  blacktop01.kicad_pcb  blacktop01.kicad_pcb-bak  blacktop01.lib  blacktop01.pro  blacktop01.sch  blacktop01.sch-bak  fp-info-cache  fp-lib-table  pinAssociations.md  sym-lib-table
hw/v02/: 16seg_logo.dxf  16seg_logo_noseg.dxf  16seg_logo_nox.dxf  16seg_logo_nox.dxf~  blacktop02-cache.lib  blacktop02-rescue.lib  blacktop02.kicad_pcb  blacktop02.kicad_pcb-bak  blacktop02.pro  blacktop02.sch  blacktop02.sch-bak  fp-info-cache  fp-lib-table  noname.kicad_pcb  sym-lib-table
license/: LICENSE
spikes/: Working Build of PCB
spikes/load_test/: README.md  load.c  makefile
spikes/pulse elf/: readme
spikes/test_program/: README.md  (+2 more)
src/: makefile
src/EEPROM_Driver/unitTests/: CMakeLists.txt  README.md  eeprom.c.gcov  eepromTests.cpp
standards/: AutomationStandard.txt  HardwareDesignStandard.txt  LocalProgrammingStandard.txt  Local_programming_standard.txt  MakeStandard.txt  SystemTestingStandard.txt  UnitTestStandard.txt  VersionControlStandard.txt  automation_standard.txt  git_standard.txt
test/: testPlan.txt
(+17 files in other folders)
